[package]
name = "embedded-physics"
version = "0.1.0"
edition = "2024"
license = "MIT or Apache-2.0"
authors = ["George C. Huntington, III"]

[dependencies]
defmt = { version = "1.0.1", default-features = false }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
micromath = { version = "2.1.0", default-features = false, features = ["num-traits", "vector", "quaternion"] }
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
thiserror-no-std = { version = "2.0.2", default-features = false }
# nalgebra = { version = "0.33.2", default-features = false, features = ["macros", "libm"] }
libm = { version = "0.2.15", default-features = false }


[features]
defmt = []
