[package]
name = "embedded-physics"
version = "0.1.0"
edition = "2024"
license = "MIT or Apache-2.0"
authors = ["George C. Huntington, III"]

[features]
default = ["defmt", "nalgebra"]
defmt = ["dep:defmt", "embedded-graphics/defmt"]
nalgebra = ["nalgebra/macros", "nalgebra/libm", "dep:libm"]


[dependencies]
defmt = { version = "1.0.1", default-features = false, optional = true }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
micromath = { version = "2.1.0", default-features = false, features = ["num-traits", "vector"] }
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
thiserror-no-std = { version = "2.0.2", default-features = false }
libm = { version = "0.2.15", default-features = false, optional = true}
heapless = { version = "0.8.0", default-features = false }
nalgebra = { version = "0.33.2", default-features = false, features = ["macros", "libm"], optional = true}
# num-complex = { version = "0.4.6", default-features = false, features = ["libm"]}
# simba = { version = "0.9.0", default-features = false, features = ["libm"]}

